objects/Config_Quarterly_Volume__c.object
<CustomObject>
    <fields>
        <fullName>Q1_Volume__c</fullName>
        <label>Q1 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q2_Volume__c</fullName>
        <label>Q2 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q3_Volume__c</fullName>
        <label>Q3 Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Config Quarterly Volume</relationshipLabel>
        <relationshipName>Config_Quarterly_Volume</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Config Quarterly Volume</label>
    <nameField>
        <label>Config Quarterly Volume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Config Quarterly Volume</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>